# llm-council

./: pyproject.toml  ruff.toml
.github/workflows/: ci.yml
backend/: config.py  council.py  main.py  openrouter.py  storage.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_council.py  test_openrouter.py  test_storage.py
frontend/: eslint.config.js  package-lock.json  package.json
frontend/src/: App.jsx  api.test.js
frontend/src/components/: ChatInterface.test.jsx  Stage2.test.jsx
frontend/src/test/: setup.js
